# test_for_secunda_1

./: .dockerignore  .env_example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py  test_data.py
app/api/v1/: activities.py  buildings.py  organizations.py
app/core/: config.py  db.py  deps.py
app/db/migration/: env.py
app/db/migration/versions/: 20251022_0001_initial.py
app/models/: __init__.py  activity.py  building.py  organization.py  phone.py
app/schemas/: activity.py  building.py  organization.py  phone.py
app/services/: activities.py  buildings.py  organizations.py
