[tool.poetry]
name = "test-for-secunda"
version = "0.1.0"
description = ""
authors = ["flezzer <shpota.den@mail.ru>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.119.1"
pydantic = "^2.12.3"
sqlalchemy = "^2.0.30"
alembic = "^1.17.0"
psycopg2-binary = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
